# yt-knowledge-base

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yaml  pyproject.toml
app/: config.py  main.py  nginx.conf
app/api/: routes.py
app/frontend/: chunks.html  index.html  transcripts.html  videos.html  viewer.css  viewer.js
app/models/: request.py  response.py
app/services/: pipeline.py
config/: settings.yaml
src/: cli.py
src/ingestion/: channel_scrapper.py  metadata_store.py  transcript_fetcher.py
src/processing/: chunker.py  text_cleaner.py
src/query/: pipeline.py
src/router/: router_model.py
src/storage/: embedder.py  vector_store.py
src/utils/: config_loader.py  file_utils.py  logger.py
src/utils.py/: config_loader.py
tests/: conftest.py
tests/unit/: test_router_model.py  test_text_chunker.py  test_text_cleaner.py
